
2002-04-22  Sam Steingold  <sds@gnu.org>

	do not go into an edless loop on `clisp -x '(assert nil)'`
	* condition.lisp (assert): name the interactive CONTINUE restart
	functions for the benefit of APPEASE-CERRORS and MUFFLE-CERRORS
	(assert-restart-no-prompts, maybe-continue, muffle-cerror):
	new functions
	(muffle-cerrors): use MUFFLE-CERROR
	(appease-cerror): use MAYBE-CONTINUE

2002-04-22  Sam Steingold  <sds@gnu.org>

	fixed bug #[ 547046 ]: compiler-macro -> no special-operator
	* compiler.lisp (c-form): call EXPAND-COMPILER-MACRO before
	checking C-FORM-TABLE to accomodate expanding to a special form

2002-04-22  Sam Steingold  <sds@gnu.org>

	* cmacros.lisp (define-compiler-macro): call CHECK-REDEFINITION

2002-04-21  Sam Steingold  <sds@gnu.org>

	* cfgamiga.lisp, cfgdos.lisp, cfgsunux.lisp, cfgunix.lisp:
	* cfgwin32.lisp, cfgacorn.lisp (*clhs-root-default*):
	restore the DEFVAR lost on 2002-04-12

2002-04-18  Sam Steingold  <sds@gnu.org>

	fixed bug [ 543072 ]: make-encoding :input-action on bad input
	* stream.d (iconv_mblen, iconv_mbstowcs): treat EINVAL (incomplete
	input) like EILEQ (conversion error) for delimited strings

2002-04-17  Sam Steingold  <sds@gnu.org>

	* stream.d (low_close_socket) [WIN32_NATIVE]: shutdown the socket
	before closing it
	(SOCKET-STREAM-SHUTDOWN): use SOCK_error(), not OS_errno()

2002-04-16  Peter Burwood  <clisp@peterb.org.uk>

	* autoconf/aclocal.m4 (HAVE_GETRUSAGE): check whether getrusage()
	actually works, not just that it is present (it is present in
	cygwin, but works only on NT, not win98)

2002-04-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* regexp.lisp (regexp-exec): correct positions for ()-group submatches

2002-04-16  Joerg-Cyril Hoehle  <Joerg-Cyril.Hoehle@t-systems.com>

	* foreign.d (convert_from_foreign): fix c-array uint8/16/32 return
	broken since CVS 1999-09-13

2002-04-16  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (parse-c-function): check :OUT & :IN-OUT args for